--- a/README
+++ b/README
@@ -10,7 +10,14 @@ Run integration tests with:
 
 	mvn verify
     
+
+In order to create the database (using PostgreSQL 9.2 or greater) run from command line:
+
+	psql -U postgres -f calc-core/src/main/resources/org/openforis/calc/db/init.sql
+
+
 Add dev database settings to calc-core/src/main/resources/dev.properties.
+
 
 IMPORTANT: When making updates to the database schema, ALWAYS ADD A Liquibase 
            MIGRATION TO calc-core/design/db/changelog.  These will be automatically run
