--- a/README
+++ b/README
@@ -59,10 +59,15 @@ UBUNTU:
 	
 	
 - Install rJava
-		If having problem (like : libjvm.so: cannot open shared object file: No such file or directory)
-			export LD_LIBRARY_PATH=/usr/lib/jvm/java-1.7.0-openjdk-i386/jre/lib/i386:/usr/lib/jvm/java-1.7.0-openjdk-i386/jre/lib/i386/client
-			sudo R CMD javareconf
-			(check with ll command the permission of libjvm file)
-			
 	 	install.packages("rJava")
- 
+
+		If having problem (like : libjvm.so: cannot open shared object file: No such file or directory):
+			- check with ll command the permission of libjvm file
+			
+			- modify etc/environment file and add:
+				LD_LIBRARY_PATH=$JAVA_HOME/jre/lib/i386:$JAVA_HOME/jre/lib/i386/client
+			(log out and login again)
+			
+			- run javareconf
+				sudo R CMD javareconf
+			
