--- a/README
+++ b/README
@@ -183,6 +183,8 @@ Tomcat 7
 			<Parameter name="calc.jdbc.schema" 		value="calc" />
 			<Parameter name="calc.jdbc.username" 	value="calc" />
 			<Parameter name="calc.jdbc.password" 	value="calc" />
+			<Parameter name="calc.jdbc.superusername" 		value="postgres" />
+			<Parameter name="calc.jdbc.superuserpassword" 	value="postgres" />
 			<Parameter name="calc.jdbc.maxActive" 	value="10" />
 			<Parameter name="calc.jdbc.minIdle" 	value="5" />
 			
