--- a/README
+++ b/README
@@ -1,19 +1,55 @@
-============================================================================
-		OF Calc download link:
-http://www.openforis.org/nexus/service/local/artifact/maven/redirect?r=releases&g=org.openforis.calc&a=calc-assembly&v=LATEST&e=zip
-
-		OF Collect download link:
-http://www.openforis.org/nexus/service/local/artifact/maven/redirect?r=releases&g=org.openforis.collect&a=collect-assembly&v=LATEST&e=zip
-============================================================================
-
-
+==============================================================
+		* Download links
+==============================================================
 		
+- Open Foris Calc:		
+	http://www.openforis.org/nexus/service/local/artifact/maven/redirect?r=releases&g=org.openforis.calc&a=calc-assembly&v=LATEST&e=zip
 
-============================================================================
- 				R Installation guide
-============================================================================
-Mac Os X
-========
+- Open Foris Collect:
+	http://www.openforis.org/nexus/service/local/artifact/maven/redirect?r=releases&g=org.openforis.collect&a=collect-assembly&v=LATEST&e=zip
+
+
+==============================================================
+		* Calc Installation instructions
+==============================================================
+1. Install Jdk 1.6 +  
+
+1. Install postgres 9.2+ with preferably user and password ‘postgres’
+	http://www.enterprisedb.com/products-services-training/pgdownload
+	
+2. Optional (not needed at the moment). After installation,  run stackbuilder to install PostGis
+
+3. Install R 3.x		
+	http://www.r-project.org/
+	
+	3.1 Set R environment variables 
+	
+		Follow specific operating system instructions in the next section ( R Installation instructions )
+	
+	3.2 Install R required packages (inside R terminal type)
+	
+		install.packages("RPostgreSQL")
+		install.packages("sqldf")
+		install.packages("rJava")
+
+	3.3 Check that rJava has been properly installed
+	
+		inside R terminal type: library(rJava)
+		
+4. Start Calc
+	execute command startup.cmd (windows only) or ./startup.sh (MacOs and linux)
+					
+5. Stop Calc	
+	execute command shutdown.cmd (windows only) or ./shutdown.sh (MacOs and linux)
+
+
+==============================================================
+		* R installation instructions
+==============================================================
+
+==============
+ * Mac Os X
+==============
 	- Download (http://cran.r-project.org/bin/macosx/) and install r
 		( If using OS X Mountain Lion install X11  (http://support.apple.com/kb/HT5293?viewlocale=en_US&locale=en_US) )
 
@@ -21,17 +57,17 @@ Mac Os X
 		sudo R
 		install.packages("RPostgreSQL")
 	 	install.packages("rJava")
-		install.packages("sqldf")
+		install.packages("sqldf");
 		
 	- set R_HOME environment variable
 		1. add to the file /etc/launchd.con (sudo vi /etc/launchd.conf) the following line:
 			setenv R_HOME /Library/Frameworks/R.framework/Resources
 		2. reboot computer
 		
-=======  
-UBUNTU
-======= 
-	Follow the istructions on http://cran.rstudio.com/
+==============
+ * Ubuntu
+============== 
+	Download R and follow the instructions to install it on http://cran.rstudio.com/
 	
 	add repository to sources list: 
 		sudo gedit /etc/apt/sources.list
@@ -77,7 +113,7 @@ UBUNTU
 				sudo R CMD javareconf
 
 ==============
-Linux RedHat 6
+ * Linux RedHat 6
 ==============
 	(64bit)
 	sudo rpm -Uvh http://download.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
@@ -99,30 +135,31 @@ Linux RedHat 6
 	
 	Set environment variable (see above)
 
-=======
-Windows
-=======
+==============
+ * Windows
+==============
 
 	- Download R for Windows (http://cran.r-project.org/bin/windows/base/)
 	
-	- Run the downloaded installer and accept the default settings or specify the preferred ones.
+	- Run the installer (If installing R under Windows Vista/7, please install it outside of c:\program files, e.g. c:\opt\r)
+		( In case of troubles installing R under Windows Vista/7, please see the R FAQ (http://cran.r-project.org/bin/windows/base/rw-FAQ.html) ) 
 	
-	(If you install R under Windows Vista/7, please install it outside of c:\program files, e.g. c:\opt\r)
+	- Set up environment variables:
 	
-	In case of troubles installing R under Windows Vista/7, please see the R FAQ (http://cran.r-project.org/bin/windows/base/rw-FAQ.html).
-	
-	- Configure environment variables:
 		- Define R_HOME environment variable ( e.g. R_HOME=c:\opt\R )
-		- Add %R_HOME%\bin and %R_HOME%\bin\i386 (or other folder containing R.dll) to the PATH environment variable (e.g. PATH=%PATH%;%R_HOME%\bin )
+		
+		- Define JAVA_HOME environment variable ( e.g. JAVA_HOME=c:\opt\java\jdk-1.7 )
+		
+		- Add to PATH environment variable: %R_HOME%\bin; %R_HOME%\bin\i386 ; %R_HOME%\library\rJava\jri ; %JAVA_HOME%\jre\bin\server;
+		
+			( e.g. PATH=%PATH%;%R_HOME%\bin;%R_HOME%\bin\i386;%R_HOME%\library\rJava\jri;%JAVA_HOME%\jre\bin\server; )
+			
 	
 	- Install R required packages:
-		From command line type:
-			R CMD INSTALL calc\lib\lmfor_1.1_20130520.zip
-	
-		From command line type:
+		- From command line type:
 			R
 			
-			Then inside R terminal type:
+		- Inside R terminal type:
 				
 				install.packages("RPostgreSQL")
 				install.packages("rJava")
@@ -133,16 +170,13 @@ Windows
 			
 			library(rJava)
 			
-			(if getting an error, check that JAVA_HOME is properly defined)
+			(if getting an error, check that JAVA_HOME and PATH have been properly defined)
 	
-	- Add %R_HOME%\library\rJava\jri to the PATH environment variable
-
-
 ============================================================================
- 				Tomcat 7 database parameters configuration
+	* Tomcat 7 database parameters configuration
 ============================================================================
 
-	- If using a standalone Tomcat installation, define the a file calc.xml inside tomcat/conf/Catalina/localhost as follow:
+	- The file calc.xml (calc-server/tomcat/conf/Catalina/localhost/calc.xml) contains the database settings as follow. Change them if you don't have the default settings
 		
 		<?xml version="1.0" encoding="UTF-8"?>
 		<Context path="/calc" reloadable="false">
