changed download link in readme

--- a/README
+++ b/README
@@ -27,8 +27,7 @@
 	Note: for Windows users, R should be installed in a folder that 
 			contains no spaces, for example "C:\Opt\R\R-3.1.0".
  
-4. Download and install Open Foris Calc [ OpenForisCalc-VERSION-PLATFORM-installer.EXTENSION ] 
-	at https://www.dropbox.com/sh/dal2upm2tu7jtx2/AAC5u-lgXRNGpIb7laAQYFWWa 
+4. Download and install Open Foris Calc [ OpenForisCalc-VERSION-PLATFORM-installer.EXTENSION ] at the above link	
 	
 	Note 1: for Windows users, CALC should be installed in a folder that contains no spaces, 
 			for example "C:\opt\OpenForisCalc".
